--- a/docs/Project/KeyStone/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/docs/Project/KeyStone/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -69,7 +69,7 @@ ServerDebugDrawingColorTint=(R=0.000000,G=0.000000,B=0.000000,A=1.000000)
 AdditionalServerLaunchParameters=
 ServerFixedFPS=0
 NetworkEmulationSettings=(bIsNetworkEmulationEnabled=False,EmulationTarget=Server,CurrentProfile="Custom",OutPackets=(MinLatency=0,MaxLatency=0,PacketLossPercentage=0),InPackets=(MinLatency=0,MaxLatency=0,PacketLossPercentage=0))
-LastSize=(X=0,Y=0)
+LastSize=(X=1282,Y=728)
 LastExecutedLaunchDevice=WindowsNoEditor@DESKTOP-2Q0JLK0
 LastExecutedLaunchName=DESKTOP-2Q0JLK0
 LastExecutedPIEPreviewDevice=
@@ -131,14 +131,14 @@ PerInstanceSettings=(ConfigName="FourPanes2x2.Viewport 1.Viewport2",ConfigSettin
 PerInstanceSettings=(ConfigName="FourPanes2x2.Viewport 1.Viewport3",ConfigSettings=(ViewportType=LVT_OrthoXY,PerspViewModeIndex=VMI_Lit,OrthoViewModeIndex=VMI_BrushWireframe,EditorShowFlagsString="PostProcessing=0,Bloom=1,Tonemapper=1,AntiAliasing=1,TemporalAA=1,AmbientCubemap=1,EyeAdaptation=1,VisualizeHDR=0,LensFlares=1,GlobalIllumination=1,Vignette=1,Grain=1,AmbientOcclusion=1,Decals=1,CameraImperfections=1,OnScreenDebug=1,OverrideDiffuseAndSpecular=0,LightingOnlyOverride=0,ReflectionOverride=0,VisualizeBuffer=0,DirectLighting=1,DirectionalLights=1,PointLights=1,SpotLights=1,RectLights=1,ColorGrading=1,VectorFields=0,DepthOfField=1,GBufferHints=0,MotionBlur=0,CompositeEditorPrimitives=1,TestImage=0,VisualizeDOF=0,VertexColors=0,PhysicalMaterialMasks=0,Refraction=1,CameraInterpolation=1,SceneColorFringe=1,ToneCurve=1,SeparateTranslucency=1,ScreenPercentage=0,VisualizeMotionBlur=0,ReflectionEnvironment=1,VisualizeOutOfBoundsPixels=0,Diffuse=1,Specular=1,SelectionOutline=1,ScreenSpaceReflections=1,ContactShadows=1,RayTracedDistanceFieldShadows=1,CapsuleShadows=1,SubsurfaceScattering=1,VisualizeSSS=0,VolumetricLightmap=1,IndirectLightingCache=1,DebugAI=0,VisLog=1,Navigation=0,GameplayDebug=1,TexturedLightProfiles=1,LightFunctions=1,Tessellation=1,InstancedStaticMeshes=1,InstancedFoliage=1,HISMCOcclusionBounds=0,HISMCClusterTree=0,InstancedGrass=1,DynamicShadows=1,Particles=1,Niagara=1,SkeletalMeshes=1,BuilderBrush=1,Translucency=1,BillboardSprites=1,LOD=1,LightComplexity=0,ShaderComplexity=0,StationaryLightOverlap=0,LightMapDensity=0,StreamingBounds=0,Constraints=0,MassProperties=0,CameraFrustums=0,AudioRadius=1,ForceFeedbackRadius=1,BSPSplit=0,Brushes=1,Lighting=1,DeferredLighting=1,Editor=1,BSPTriangles=0,LargeVertices=0,Grid=1,Snap=0,MeshEdges=0,Cover=0,Splines=1,Selection=1,ModeWidgets=1,Bounds=0,HitProxies=0,PropertyColoration=0,LightInfluences=0,Pivot=1,ShadowFrustums=0,Wireframe=1,Materials=1,StaticMeshes=1,Landscape=1,LightRadius=1,Fog=1,Volumes=1,Game=0,LevelColoration=0,BSP=1,Collision=0,CollisionVisibility=0,CollisionPawn=0,LightShafts=1,PostProcessMaterial=1,Atmosphere=1,CameraAspectRatioBars=0,CameraSafeFrames=0,TextRender=1,Rendering=1,HMDDistortion=0,StereoRendering=0,DistanceCulledPrimitives=1,VisualizeLightCulling=0,PrecomputedVisibility=1,SkyLighting=1,VisualizeLPV=0,PreviewShadowsIndicator=1,PrecomputedVisibilityCells=0,VisualizeVolumetricLightmap=0,VolumeLightingSamples=0,Paper2DSprites=1,VisualizeDistanceFieldAO=0,VisualizeMeshDistanceFields=0,VisualizeGlobalDistanceField=0,ScreenSpaceAO=1,DistanceFieldAO=1,VolumetricFog=1,VisualizeSSR=0,VisualizeShadingModels=0,VisualizeSenses=1,LODColoration=0,HLODColoration=0,QuadOverdraw=0,ShaderComplexityWithQuadOverdraw=0,PrimitiveDistanceAccuracy=0,MeshUVDensityAccuracy=0,MaterialTextureScaleAccuracy=0,OutputMaterialTextureScales=0,RequiredTextureResolution=0,WidgetComponents=1,Bones=0,ServerDrawDebug=0,MediaPlanes=1,VREditing=0,OcclusionMeshes=0,PathTracing=0,RayTracingDebug=0,VisualizeSkyAtmosphere=0,VisualizeCalibrationColor=0,VisualizeCalibrationGrayscale=0,VisualizeCalibrationCustom=0,VirtualTexturePrimitives=0,VisualizeVolumetricCloudConservativeDensity=0,SingleLayerWaterRefractionFullPrecision=0",GameShowFlagsString="PostProcessing=0,Bloom=1,Tonemapper=1,AntiAliasing=1,TemporalAA=1,AmbientCubemap=1,EyeAdaptation=1,VisualizeHDR=0,LensFlares=1,GlobalIllumination=1,Vignette=1,Grain=1,AmbientOcclusion=1,Decals=1,CameraImperfections=1,OnScreenDebug=1,OverrideDiffuseAndSpecular=0,LightingOnlyOverride=0,ReflectionOverride=0,VisualizeBuffer=0,DirectLighting=1,DirectionalLights=1,PointLights=1,SpotLights=1,RectLights=1,ColorGrading=1,VectorFields=0,DepthOfField=1,GBufferHints=0,MotionBlur=1,CompositeEditorPrimitives=0,TestImage=0,VisualizeDOF=0,VertexColors=0,PhysicalMaterialMasks=0,Refraction=1,CameraInterpolation=1,SceneColorFringe=1,ToneCurve=1,SeparateTranslucency=1,ScreenPercentage=1,VisualizeMotionBlur=0,ReflectionEnvironment=1,VisualizeOutOfBoundsPixels=0,Diffuse=1,Specular=1,SelectionOutline=0,ScreenSpaceReflections=1,ContactShadows=1,RayTracedDistanceFieldShadows=1,CapsuleShadows=1,SubsurfaceScattering=1,VisualizeSSS=0,VolumetricLightmap=1,IndirectLightingCache=1,DebugAI=0,VisLog=1,Navigation=0,GameplayDebug=1,TexturedLightProfiles=1,LightFunctions=1,Tessellation=1,InstancedStaticMeshes=1,InstancedFoliage=1,HISMCOcclusionBounds=0,HISMCClusterTree=0,InstancedGrass=1,DynamicShadows=1,Particles=1,Niagara=1,SkeletalMeshes=1,BuilderBrush=1,Translucency=1,BillboardSprites=1,LOD=1,LightComplexity=0,ShaderComplexity=0,StationaryLightOverlap=0,LightMapDensity=0,StreamingBounds=0,Constraints=0,MassProperties=0,CameraFrustums=0,AudioRadius=0,ForceFeedbackRadius=1,BSPSplit=0,Brushes=1,Lighting=1,DeferredLighting=1,Editor=0,BSPTriangles=0,LargeVertices=0,Grid=0,Snap=0,MeshEdges=0,Cover=0,Splines=0,Selection=0,ModeWidgets=0,Bounds=0,HitProxies=0,PropertyColoration=0,LightInfluences=0,Pivot=0,ShadowFrustums=0,Wireframe=1,Materials=1,StaticMeshes=1,Landscape=1,LightRadius=0,Fog=1,Volumes=0,Game=1,LevelColoration=0,BSP=1,Collision=0,CollisionVisibility=0,CollisionPawn=0,LightShafts=1,PostProcessMaterial=1,Atmosphere=1,CameraAspectRatioBars=0,CameraSafeFrames=0,TextRender=1,Rendering=1,HMDDistortion=0,StereoRendering=0,DistanceCulledPrimitives=0,VisualizeLightCulling=0,PrecomputedVisibility=1,SkyLighting=1,VisualizeLPV=0,PreviewShadowsIndicator=1,PrecomputedVisibilityCells=0,VisualizeVolumetricLightmap=0,VolumeLightingSamples=0,Paper2DSprites=1,VisualizeDistanceFieldAO=0,VisualizeMeshDistanceFields=0,VisualizeGlobalDistanceField=0,ScreenSpaceAO=1,DistanceFieldAO=1,VolumetricFog=1,VisualizeSSR=0,VisualizeShadingModels=0,VisualizeSenses=1,LODColoration=0,HLODColoration=0,QuadOverdraw=0,ShaderComplexityWithQuadOverdraw=0,PrimitiveDistanceAccuracy=0,MeshUVDensityAccuracy=0,MaterialTextureScaleAccuracy=0,OutputMaterialTextureScales=0,RequiredTextureResolution=0,WidgetComponents=1,Bones=0,ServerDrawDebug=0,MediaPlanes=1,VREditing=0,OcclusionMeshes=0,PathTracing=0,RayTracingDebug=0,VisualizeSkyAtmosphere=0,VisualizeCalibrationColor=0,VisualizeCalibrationGrayscale=0,VisualizeCalibrationCustom=0,VirtualTexturePrimitives=0,VisualizeVolumetricCloudConservativeDensity=0,SingleLayerWaterRefractionFullPrecision=0",BufferVisualizationMode="",RayTracingDebugVisualizationMode="",ExposureSettings=(FixedEV100=1.000000,bFixed=False),FOVAngle=90.000000,FarViewPlane=0.000000,bIsRealtime=False,bShowOnScreenStats=True,EnabledStats=,bShowFullToolbar=True))
 
 [MRU]
-MRUItem0=/Game/MedievalDungeon/Maps/DungeonLevel2
-MRUItem1=/Game/MedievalDungeon/Maps/DungeonLevel
-MRUItem2=/Game/NEW_DungeonLevel_TEST
+MRUItem0=/Game/NEW_DungeonLevel_TEST
+MRUItem1=/Game/MedievalDungeon/Maps/DungeonLevel2
+MRUItem2=/Game/MedievalDungeon/Maps/DungeonLevel
 MRUItem3=/Game/Tanner/Levels/MainMenuLevel
 MRUItem4=/Game/DungeonTESTLevel1
 
 [ContentBrowser]
-ContentBrowserTab1.SelectedPaths=/Game/MedievalDungeon/Maps
+ContentBrowserTab1.SelectedPaths=/Game/Tanner/MainMenu/Widgets
 AssetPropertyPicker.ThumbnailSizeScale=0.100000
 AssetPropertyPicker.CurrentViewType=0
 ContentBrowserTab1.SourcesExpanded=True
@@ -208,38 +208,36 @@ SequenceBrowser.HiddenColumns=Class
 
 [EditorStartup]
 LastLevel=/Game/DungeonLevel_MAZE_ADDED
-LastLevel=/Game/MedievalDungeon/Maps/DungeonLevel2
+LastLevel=/Game/NEW_DungeonLevel_TEST
 None=======
 
 [AssetEditorSubsystem]
 CleanShutdown=True
 SuppressRestorePreviouslyOpenAssetsNotification=True
-OpenAssetsAtExit=/Game/Tanner/MainMenu/BluePrints/Coin_BP.Coin_BP
-OpenAssetsAtExit=/Game/Tanner/MainMenu/BluePrints/BP_checkpoint.BP_checkpoint
-OpenAssetsAtExit=/Game/KeystoneThirdPerson/Blueprints/HUD/Death.Death
-OpenAssetsAtExit=/Game/Tanner/MainMenu/Widgets/SavedDisplay.SavedDisplay
+OpenAssetsAtExit=/Game/Player.Player
+OpenAssetsAtExit=/Game/Tanner/MainMenu/Widgets/CreditWidget.CreditWidget
 
 [ContentBrowserRecent]
-MRUItem0=/Game/MedievalDungeon/Maps/DungeonLevel2
-MRUItem1=/Game/MedievalDungeon/Maps/DungeonLevel
-MRUItem2=/Game/Tanner/MainMenu/Widgets/SavedDisplay
-MRUItem3=/Game/KeystoneThirdPerson/Blueprints/HUD/Death
-MRUItem4=/Game/Tanner/MainMenu/BluePrints/BP_checkpoint
-MRUItem5=/Game/Tanner/MainMenu/BluePrints/Coin_BP
-MRUItem6=/Game/Alexis/AI/KnightController
-MRUItem7=/Game/Humza/SkeletonNoArmor/SkeletonBBnoArmor
-MRUItem8=/Game/Humza/SkeletonNoArmor/SkeleNoArmorAiController
-MRUItem9=/Game/Alexis/AI/speedChange
-MRUItem10=/Game/Alexis/AI/EnemyAiAttacks/Task/chaseplayer
-MRUItem11=/Game/Alexis/AI/EnemyAiAttacks/Task/stanceChange
-MRUItem12=/Game/Alexis/AI/EnemyAiAttacks/Deco/IsInCloseRangeDistance
-MRUItem13=/Game/Alexis/AI/EnemyAiAttacks/Task/Attack1BTtask
-MRUItem14=/Game/Alexis/AI/EnemyAiAttacks/Task/findplayerlocation
-MRUItem15=/Game/Alexis/AI/EnemyAiAttacks/Task/DecrementPath
-MRUItem16=/Game/Alexis/AI/EnemyAiAttacks/Task/IncrementPath
-MRUItem17=/Game/Alexis/AI/EnemyAiAttacks/Task/FindPathPoint
-MRUItem18=/Game/Alexis/AI/KnightBT
-MRUItem19=/Game/Alexis/AI/KnightAI_BP
+MRUItem0=/Game/Tanner/MainMenu/Widgets/CreditWidget
+MRUItem1=/Game/Tanner/MainMenu/Widgets/ControlsWidget
+MRUItem2=/Game/Player
+MRUItem3=/Game/MedievalDungeon/Maps/DungeonLevel2
+MRUItem4=/Game/MedievalDungeon/Maps/DungeonLevel
+MRUItem5=/Game/Tanner/MainMenu/Widgets/SavedDisplay
+MRUItem6=/Game/KeystoneThirdPerson/Blueprints/HUD/Death
+MRUItem7=/Game/Tanner/MainMenu/BluePrints/BP_checkpoint
+MRUItem8=/Game/Tanner/MainMenu/BluePrints/Coin_BP
+MRUItem9=/Game/Alexis/AI/KnightController
+MRUItem10=/Game/Humza/SkeletonNoArmor/SkeletonBBnoArmor
+MRUItem11=/Game/Humza/SkeletonNoArmor/SkeleNoArmorAiController
+MRUItem12=/Game/Alexis/AI/speedChange
+MRUItem13=/Game/Alexis/AI/EnemyAiAttacks/Task/chaseplayer
+MRUItem14=/Game/Alexis/AI/EnemyAiAttacks/Task/stanceChange
+MRUItem15=/Game/Alexis/AI/EnemyAiAttacks/Deco/IsInCloseRangeDistance
+MRUItem16=/Game/Alexis/AI/EnemyAiAttacks/Task/Attack1BTtask
+MRUItem17=/Game/Alexis/AI/EnemyAiAttacks/Task/findplayerlocation
+MRUItem18=/Game/Alexis/AI/EnemyAiAttacks/Task/DecrementPath
+MRUItem19=/Game/Alexis/AI/EnemyAiAttacks/Task/IncrementPath
 
 [DetailCategories]
 BP_Openable_Door_C.TransformCommon=True
@@ -1591,6 +1589,7 @@ None=======
 /Game/Alexis/AI/EnemyAiAttacks/Deco/IsInCloseRangeDistance.IsInCloseRangeDistance=1
 /Game/Humza/SkeletonNoArmor/SkeleNoArmorAiController.SkeleNoArmorAiController=1
 /Game/Humza/SkeletonNoArmor/SkeletonBBnoArmor.SkeletonBBnoArmor=1
+/Game/Tanner/MainMenu/Widgets/ControlsWidget.ControlsWidget=0
 
 [/Script/BlueprintGraph.BlueprintEditorSettings]
 bDrawMidpointArrowsInBlueprints=False
@@ -1637,16 +1636,16 @@ GameInstance=
 Object=
 InventorySlotWG_C=
 UserWidget=
-Widget=
-Visual=
+Widget="\"Object.Appearance.Font\" "
+Visual="\"Object.Appearance.Font\" "
 InventoryComponent_C="\"Object.Default.Inventory\" \"Object.Default.Inventory.Inventory[0]\" \"Object.Default.Inventory.Inventory[0].ItemStructure_2_49E80B77418358766F9244BBBE94D70A\" "
 ActorComponent=
 Player_C=
-Player_C="\"Object.TutorialInputUpgradeTree\" "
+Player_C=
 None=======
 None=======
-Character="\"Object.CharacterMovement\" "
-Pawn="\"Object.CharacterMovement\" "
+Character=
+Pawn=
 MySaveGame_C="\"Object.TutorialPlayed\" "
 SaveGame="\"Object.TutorialPlayed\" "
 InventoryWG_C="\"Object.InventorySlotArray\" "
@@ -1681,8 +1680,8 @@ ChestInventoryWG_C="\"Object.Inventory\" "
 Image="\"Object.Appearance.Brush\" "
 WorkingChest4_C="\"Object.Default.Chest_Items\" "
 KnightHealth_C="\"Object.Health\" "
-TextBlock=
-TextLayoutWidget=
+TextBlock="\"Object.Appearance.Font\" "
+TextLayoutWidget="\"Object.Appearance.Font\" "
 ChooseRespawn_C="\"Object.As My Save Game\" "
 TalentToken_C="\"Object.Default.ItemInfoStruct\" "
 WorkingChest5_C="\"Object.Chest_Items\" "
